$Id$

2017-10-02  Christian Franke  <franke@computer.org>

	smartd.cpp: Add strict tests of /dev/null redirection and chdir("/").

	configure.ac: Use '-fstack-protector' if '-strong' is not supported.

2017-10-01  Christian Franke  <franke@computer.org>

	configure.ac: Set default LDFLAGS for MinGW only if LDFLAGS is unset.
	Add '-Wformat=2 -fstack-protector-strong' if supported and CXXFLAGS
	is unset.

	drivedb.h:
	- Fix regexp from tickets #714, #721, #759, #789, #797, #798, #806,
	  #824, #825, #866, #872, #880.
	- SK hynix SATA SSDs (based on patch from ticket #874)

2017-09-25  Alex Samorukov  <samm@os2.kiev.ua>

	NVME:
	- extend controller and smart log page structures to match 1.3 specification.
	- Print thermal temperature transition statistic
	drivedb.h:
	- Added support for more LaCie and Freecom devices (patch from #891)

2017-09-24  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h:
	- Added Toshiba MK..34GSX series (#886) and MK..32GSX series (#887)
	- Added GOODRAM CX200 SSD (#838)
	- Added Mushkin SSD family (#797)
	- Added Samsung PM871 to the Samsung SSD family (#798)
	- Added PNY CS1311 family (#890)
	- Added 0x152d:0x0578 Jmicron USB->SATA
	- Added Transcend MTS800 drives (#787)
	- Added Transcend MSA 630 series (#759)
	- Extended Hitachi Deskstar 7K3000 regexp (#858)

2017-09-23  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h:
	- Fix HGST HDS724040ALE640 (#885)
	- Add Toshiba MQ03ABB300 (#884)
	- Fixed Hitachi 7K1000 (#883)
	- Added Seagate Barracuda 2.5 5400 series (#882)
	- Added new Seagate Barracuda 3.5 7200 series (#880)
	- Added Toshiba P300 series (#881)
	- Added SK hynix SSD SC300 series (#699)
	- Added Toshiba HG6 Series SSD (#721)
	- Added Hynix SSD series
	- Added AMD Radeon Solid State Drives (#762)
	- Added USB Bridge 0x3538:0x0064 (#855)
	- Added Seagate ST4000NM0085 to the Capacity family
	- Added Sandisk SATA Cloudspeed Max and GEN2 ESS SSDs and Sandisk SATA CS1K
	  GEN1 ESS SSDs (#846)
	- Added Seagate FireCuda drives (#825)