@@ -1,5 +1,9 @@
 $Id$
 
+2017-10-03  Christian Franke  <franke@computer.org>
+
+	nvmeprint.cpp: Print new NVMe 1.3 feature flags.
+
 2017-10-02  Christian Franke  <franke@computer.org>
 
 	smartd.cpp: Add strict tests of /dev/null redirection and chdir("/").
